# deep_4_all

./: Dockerfile  README.md  pyproject.toml  requirements.txt
cours/: requirements.txt
cours/CM/: 01-Nlp intro.ipynb  02-Parameterized Learning.ipynb  03-word embedding.ipynb  04-RNN-lstm.ipynb  04-RNN.ipynb  05-1-Transformers.ipynb  05-2-transformer-encoder-only.ipynb  05-2-transformers-decoder-only.ipynb  05-3-transformers-decoder-only.ipynb  05-Transformers.ipynb  05-transformer-encoder-only.ipynb  06-lora.ipynb
cours/CM/aide_mémoire/: 01-Nlp intro.md  02-parameterized_learning.md  readme.md
cours/TP/: 01-knn.ipynb  02-MLPClassifier.ipynb  02-cnn.ipynb  02-cnnBasic.ipynb  02bis-cnn.ipynb  03-classifier-embedding.ipynb  03-letter-embedding.ipynb  03-text classification.ipynb  04-optional-rnn-lstm.ipynb  04-rnn-lstm.ipynb  05-huggingface-transformers.ipynb  lstm_translate.py  multi-gpu.ipynb  single-gpu.ipynb  smalvlm_usage.ipynb  smolvlm.py
cours/TP/serving_example/: Dockerfile  config.properties  handler.py  readme.md  requirements.txt
cours/TP/solution/: 03-letter-embedding.ipynb
cours/TP/text/: SFT_train_TPU.ipynb  config.yaml  multi_gpu.ipynb  sft_train.py  sft_train_gpu.ipynb  tpu-config.yaml
datasets/oasst/: convert.py  readme.md  requirements.txt
datasets/oasst/oasst_data/: formating.py
datasets_formating/oasst/oasst_data/: __init__.py  reader.py  writer.py
notes/: Paged Optimizers.md  notes_tp.md
tgi_demo/: app.py  readme.md
train_technics/sft/: readme.md  train.py
use_case/hackprompt_filer/: README.md  docker-compose.yml  hack_prompts  index_prompts.py
