[project]
name = "deep_4_all"
version = "2.5"
description = "Deep for all"
authors = [
    { name = "BLANC Swan" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "plotly (>=5.24.1,<6.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "spacy (>=3.8.4,<4.0.0)",
    "torchtext (>=0.18.0,<0.19.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "portalocker (>=3.1.1,<4.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "transformers (>=4.48.1,<5.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
locust = "^2.32.5"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"


[tool.poetry.dependencies]
torch = {source = "torch"}
torchvision = {source = "torch"}
