[project]
name = "deep_4_all"
version = "2.5"
description = "Deep for all"
authors = [
    { name = "BLANC Swan" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "plotly (>=5.24.1,<6.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "spacy (>=3.8.4,<4.0.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "portalocker (>=3.1.1,<4.0.0)",
    "opencv-contrib-python (>=4.11.0.86,<5.0.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "transformers (>=4.48.1,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "bitsandbytes (>=0.45.1,<0.46.0)",
    "peft (>=0.14.0,<0.15.0)",
    "accelerate (>=1.3.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "ninja",
    "psutil",
    "jupyterlab-rise",
    "openai",
    "gradio (>=5.15.0,<6.0.0)",
    "pillow"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
locust = "^2.32.5"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"

[tool.poetry.dependencies]
torch = {version = ">=2.6.0,<3.0.0", source = "torch"}
torchvision = {version = ">=0.21.0,<0.22.0", source = "torch"}
